# aida-pva

./: README.md  overview.html  pom.xml
docs/: 1_00_User_Guide.md  1_01_Aida_Pva_Client.md  1_01_Users_Guide_SLC_Controls_Database_Channel_Provider.md  1_02_Users_Guide_SLC_BPM_Channel_Provider.md  1_02_Users_Guide_SLC_Controls_Database_Channel_Provider.md  1_03_Users_Guide_SLC_BPM_Channel_Provider.md  1_03_Users_Guide_SLC_Bufferred_Acquisition_Channel_Provider.md  1_04_Users_Guide_SLC_Buffered_Acquisition_Channel_Provider.md  1_04_Users_Guide_SLC_Bufferred_Acquisition_Channel_Provider.md  1_04_Users_Guide_SLC_Klystron_Channel_Provider.md  1_05_Users_Guide_SLC_Klystron_Channel_Provider.md  1_05_Users_Guide_SLC_Magnet_Channel_Provider.md  1_06_Users_Guide_SLC_Magnet_Channel_Provider.md  1_06_Users_Guide_SLC_Master_Oscillator_Channel_Provider.md  1_07_Users_Guide_SLC_Master_Oscillator_Channel_Provider.md  1_07_Users_Guide_SLC_Utility_Channel_Provider.md  1_08_Users_Guide_Reference_Channel_Provider.md  1_08_Users_Guide_SLC_Utility_Channel_Provider.md  1_09_User_Guide_for_AIDA_Users.md  1_09_Users_Guide_Reference_Channel_Provider.md  1_10_User_Guide_for_AIDA_Users.md  1_10_User_Guide_for_EPICS_Users.md  1_11_User_Guide_for_EPICS_Users.md  1_12_Matlab_Code.md  2_0_Channel_Provider_Programmers_Reference.md  2_1_Channel_Provider_Implementation_Reference.md  2_2_Normative_Types.md  (+45 more)
src/cpp/: CMakeLists.txt  README.md  aida_server_helper.c  reference_server_jni.c
src/cpp/aida-pva/: BUILD.COM  LIBRARY_OPTION.OPT  NativeChannelProviderJni.c  aida_jni_helper.c  aida_pva_jni_helper.c  aida_pva_jni_helper.h  aida_pva_json.c  aida_pva_lib.h  aida_pva_server_helper.c  aida_pva_server_helper.h  aida_pva_types_helper.c  aida_pva_types_helper.h  aida_server_helper.c  aida_types_helper.c  json.c  slac_aida_NativeChannelProvider.h
src/cpp/impl/: reference_server.c
src/cpp/impl/Reference/: reference_server.c
src/cpp/impl/SLC/: slc_server.c
src/cpp/impl/SLCBpm/: slcBpm_server.c
src/cpp/impl/SLCBuffAcq/: slcBuffAcq_server.c
src/cpp/impl/SLCKlys/: slcKlys_server.c
src/cpp/impl/SLCMagnet/: slcMagnet_server.c
src/cpp/impl/SLCModel/: slcModel_server.c
src/cpp/impl/SLCMosc/: slcMosc_server.c
src/cpp/impl/SLCUtil/: slcUtil_server.c
src/cpp/include/: aida_jni_helper.h  aida_provider.h  aida_pva.h  aida_pva_api.h  aida_pva_convert.h  aida_pva_exceptions.h  aida_pva_json.h  aida_pva_memory.h  aida_pva_types.h  aida_pva_uri.h  aida_server_helper.h  aida_types.h  reference_server.h  slc_macr.hc  slc_macros.h
src/cpp/include/Reference/: reference_server.h
src/cpp/include/SLC/: slc_server.h
src/cpp/include/SLCBpm/: slcBpm_server.h
src/cpp/include/SLCBuffAcq/: slcBuffAcq_server.h
src/cpp/include/SLCKlys/: slcKlys_server.h
src/cpp/include/SLCMagnet/: slcMagnet_server.h
src/cpp/include/SLCModel/: slcModel_server.h
src/cpp/include/SLCMosc/: slcMosc_server.h
src/cpp/include/SLCUtil/: slcUtil_server.h
src/cpp/include/aida-pva/: aida_jni_helper.h  aida_server_helper.h  aida_types.h  json.h  slac_aida_NativeChannelProvider.h
src/cpp/lib/: NativeChannelProviderJni.c  aida_jni_helper.c  aida_server_helper.c  aida_types_helper.c
src/cpp/providers/: AIDAPVA.OPT  AIDASHR_XFR_ALPHA.OPT  CRRUTIL_XFR_ALPHA.OPT  DPSLCBUFF_JNI_HELPER.C  DPSLCKLYS_JNI_HELPER.c  DPSLCUTIL_JNI_HELPER.c  EPICS-FORWARDER.SUBMIT  EPICS_FORWARDER.SUBMIT  STARTAIDASLC.COM
src/cpp/providers/Reference/: AIDASLCREF_CHANNELS.YML  AIDASLCREF_SERVER.h  AIDASLCREF_XFR_ALPHA.OPT  BUILD.COM  LIBRARY_OPTION.OPT  reference_server.c  reference_server.h  start.COM
src/cpp/providers/SLC/: AIDASLCDB_CHANNELS.YAML  AIDASLCDB_SERVER.h  BUILD.COM  LIBRARY_OPTION.OPT  channels.yaml  slc_server.c  slc_server.h  start.COM
src/cpp/providers/SLCBPM/: AIDASLCBPM_CHANNELS.YML  AIDASLCBPM_GENERAL.OPT  AIDASLCBPM_SERVER.c  AIDA_SLCBPM.SUBMIT
src/cpp/providers/SLCBPMBUFF/: AIDASLCBPMBUFF_CHANNELS.YML  AIDASLCBPMBUFF_GENERAL.OPT  AIDASLCBPMBUFF_SERVER.c  AIDA_SLCBPMBUFF.SUBMIT  DPSLCBUFF.H
src/cpp/providers/SLCBpm/: AIDASLCBPM_CHANNELS.YML  AIDASLCBPM_GENERAL.OPT  AIDASLCBPM_SERVER.c  AIDASLCBPM_SERVER.h  BUILD.COM  LIBRARY_OPTION.OPT  REBUILD.COM  slcBpm_server.c  slcBpm_server.h
src/cpp/providers/SLCBuffAcq/: AIDASLCBPMBUFF_CHANNELS.YML  AIDASLCBPMBUFF_GENERAL.OPT  AIDASLCBPMBUFF_SERVER.h  BUILD.COM  LIBRARY_OPTION.OPT  slcBuffAcq_server.c  slcBuffAcq_server.h
src/cpp/providers/SLCDB/: AIDASLCDB_CHANNELS.YAML  AIDASLCDB_GENERAL.OPT  AIDASLCDB_SERVER.c  AIDASLCDB_SERVER.h  AIDA_SLCDB.SUBMIT  DPSLC_JNI_HELPER.C
src/cpp/providers/SLCKLYS/: AIDASLCKLYS_CHANNELS.YML  AIDASLCKLYS_GENERAL.OPT  AIDASLCKLYS_SERVER.c  AIDASLCKLYS_SERVER.h  AIDA_SLCKLYS.SUBMIT  DPSLCKLYS_JNI_HELPER.c
src/cpp/providers/SLCKlys/: AIDASLCKLYS_SERVER.c  BUILD.COM  LIBRARY_OPTION.OPT  slcKlys_server.c  slcKlys_server.h
src/cpp/providers/SLCMAGNET/: AIDASLCMAGNET_CHANNELS.YML  AIDASLCMAGNET_GENERAL.OPT  AIDASLCMAGNET_SERVER.c  AIDASLCMAGNET_SERVER.h  AIDA_SLCMAGNET.SUBMIT
src/cpp/providers/SLCMODEL/: AIDASLCMODEL_CHANNELS.YML  AIDASLCMODEL_GENERAL.OPT  AIDASLCMODEL_SERVER.c
src/cpp/providers/SLCMOSC/: AIDASLCMOSC_CHANNELS.YML  AIDASLCMOSC_GENERAL.OPT  AIDASLCMOSC_SERVER.c
src/cpp/providers/SLCMagnet/: AIDASLCMAGNET_GENERAL.OPT  BUILD.COM  LIBRARY_OPTION.OPT  channels.yml  slcMagnet_server.c  slcMagnet_server.h
src/cpp/providers/SLCModel/: AIDASLCMODEL_SERVER.h  BUILD.COM  LIBRARY_OPTION.OPT  channels.yml  slcModel_server.c  slcModel_server.h
src/cpp/providers/SLCMosc/: AIDASLCMOSC_CHANNELS.YML  AIDASLCMOSC_GENERAL.OPT  AIDASLCMOSC_SERVER.c  AIDASLCMOSC_SERVER.h  BUILD.COM  LIBRARY_OPTION.OPT  slcMosc_server.c  slcMosc_server.h
src/cpp/providers/SLCREF/: AIDASLCREF_CHANNELS.YML  AIDASLCREF_GENERAL.OPT  AIDASLCREF_SERVER.c  AIDASLCREF_XFR_ALPHA.OPT  example.yml
src/cpp/providers/SLCUTIL/: AIDASLCUTIL_CHANNELS.YML  AIDASLCUTIL_GENERAL.OPT  AIDASLCUTIL_SERVER.c  AIDASLCUTIL_SERVER.h  AIDA_SLCUTIL.SUBMIT  CRRSIMPL.BTN  CRRTEST.BTN
src/cpp/providers/SLCUtil/: AIDASLCUTIL_SERVER.c  BUILD.COM  LIBRARY_OPTION.OPT  slcUtil_server.c  slcUtil_server.h
(+844 files in other folders)
