cmake_minimum_required(VERSION 3.17)
set(CMAKE_TRY_COMPILE_TARGET_TYPE "STATIC_LIBRARY")
project(aida-pva C)

set(CMAKE_C_STANDARD 99)

include_directories(include
        /Library/Java/JavaVirtualMachines/jdk1.8.0.jdk/Contents/Home/include
        /Library/Java/JavaVirtualMachines/jdk1.8.0.jdk/Contents/Home/include/darwin
        /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk/usr/include
        /Users/george/Projects/com/SLAC/include
        include
        )

add_executable(cpp
        aida-pva/aida_pva_jni_helper.c
        aida-pva/aida_pva_jni_helper.h
        aida-pva/aida_pva_server_helper.c
        aida-pva/aida_pva_server_helper.h
        aida-pva/aida_pva_types_helper.c
        aida-pva/aida_pva_types_helper.h
        aida-pva/NativeChannelProviderJni.c
        aida-pva/slac_aida_NativeChannelProvider.h
        aida-pva/aida_pva_json.c
        include/aida_pva_json.h
        include/aida_pva.h
        include/aida_pva_api.h
        include/aida_pva_convert.h
        include/aida_pva_exceptions.h
        include/aida_pva_memory.h
        include/aida_pva_types.h
        include/aida_pva_uri.h
        providers/DPSLC_JNI_HELPER.C
        providers/DPSLCBUFF.H
        providers/DPSLCBUFF_JNI_HELPER.C
        providers/DPSLCKLYS_JNI_HELPER.C
        providers/SLCREF/AIDASLCREF_SERVER.c
        providers/SLCREF/AIDASLCREF_SERVER.h
        providers/SLCDB/AIDASLCDB_SERVER.c
        providers/SLCDB/AIDASLCDB_SERVER.h
        providers/SLCBPM/AIDASLCBPM_SERVER.c
        providers/SLCBPM/AIDASLCBPM_SERVER.h
        providers/SLCBPMBUFF/AIDASLCBPMBUFF_SERVER.c
        providers/SLCBPMBUFF/AIDASLCBPMBUFF_SERVER.h
        providers/SLCKLYS/AIDASLCKLYS_SERVER.c
        providers/SLCKLYS/AIDASLCKLYS_SERVER.h
        providers/SLCMAGNET/AIDASLCMAGNET_SERVER.c
        providers/SLCMAGNET/AIDASLCMAGNET_SERVER.h
        providers/SLCMODEL/AIDASLCMODEL_SERVER.c
        providers/SLCMODEL/AIDASLCMODEL_SERVER.h
        providers/SLCMOSC/AIDASLCMOSC_SERVER.c
        providers/SLCMOSC/AIDASLCMOSC_SERVER.h
        providers/SLCUTIL/AIDASLCUTIL_SERVER.c
        providers/SLCUTIL/AIDASLCUTIL_SERVER.h
        fbckutil/fa_acquire_data.c
        fbckutil/fa_alloc_ring.c
        fbckutil/fa_average_data.c
        fbckutil/fa_build_mail.c
        fbckutil/fa_change_hhpt.c
        fbckutil/fa_change_hsta.c
        fbckutil/fa_check_dual_magnet.c
        fbckutil/fa_check_fb31.c
        fbckutil/fa_check_loop_beam.c
        fbckutil/fa_check_ltim.c
        fbckutil/fa_check_one_fflum.c
        fbckutil/fa_check_setp_loops.c
        fbckutil/fa_check_statetol.c
        fbckutil/fa_check_upstream_loop.c
        fbckutil/fa_cold_ctl_cascade.c
        fbckutil/fa_cold_ctl_task.c
        fbckutil/fa_cold_msg_init.c
        fbckutil/fa_create_objects.c
        fbckutil/fa_dbput_one_matrix.c
        fbckutil/fa_def_in_ring.c
        fbckutil/fa_delete_axis.c
        fbckutil/fa_delete_fbckdata.c
        fbckutil/fa_egain_limt.c
        fbckutil/fa_expand_plot.c
        fbckutil/fa_extract_context.c
        fbckutil/fa_fb69_beampos.c
        fbckutil/fa_fbckstat_as_string.c
        fbckutil/fa_felbstat_as_string.c
        fbckutil/fa_find_element.c
        fbckutil/fa_find_fcom_unit.c
        fbckutil/fa_get_axis_edge.c
        fbckutil/fa_get_ctl_data.c
        fbckutil/fa_get_cur_struct.c
        fbckutil/fa_get_dual_partners.c
        fbckutil/fa_get_feedback_info.c
        fbckutil/fa_get_felb.c
        fbckutil/fa_get_loop_data.c
        fbckutil/fa_get_micro.c
        fbckutil/fa_get_micro_task.c
        fbckutil/fa_get_n_vec.c
        fbckutil/fa_get_ring_token.c
        fbckutil/fa_get_vec_element_units.c
        fbckutil/fa_get_vec_elements.c
        fbckutil/fa_get_vector.c
        fbckutil/fa_hot_msg_init.c
        fbckutil/fa_hsta.c
        fbckutil/fa_hsta_as_string.c
        fbckutil/fa_init.c
        fbckutil/fa_init_for_cold.c
        fbckutil/fa_invert_hmpt.c
        fbckutil/fa_ipl_flag.c
        fbckutil/fa_is_setpoint_fbckctrl.c
        fbckutil/fa_lock.c
        fbckutil/fa_loop.c
        fbckutil/fa_mail_header.c
        fbckutil/fa_main_button.c
        fbckutil/fa_make_full_vector.c
        fbckutil/fa_merge_hsta.c
        fbckutil/fa_one_shot.c
        fbckutil/fa_parse_def_ring.c
        fbckutil/fa_parse_elem.c
        fbckutil/fa_parse_mvar.c
        fbckutil/fa_parse_plot.c
        fbckutil/fa_parse_string.c
        fbckutil/fa_parse_time.c
        fbckutil/fa_parse_var.c
        fbckutil/fa_plot_button.c
        fbckutil/fa_put_db.c
        fbckutil/fa_put_vec_elements.c
        fbckutil/fa_read_db.c
        fbckutil/fa_read_one_matrix.c
        fbckutil/fa_save_coroutine.c
        fbckutil/fa_save_gold.c
        fbckutil/fa_sec_vec.c
        fbckutil/fa_send_function.c
        fbckutil/fa_send_index_function.c
        fbckutil/fa_send_partial.c
        fbckutil/fa_send_ring.c
        fbckutil/fa_set_auto_limits.c
        fbckutil/fa_set_context.c
        fbckutil/fa_set_feedback.c
        fbckutil/fa_setpoint.c
        fbckutil/fa_stat_as_string.c
        fbckutil/fa_stat_color.c
        fbckutil/fa_string_as_hsta.c
        fbckutil/fa_table.c
        fbckutil/fa_translate_vector_type.c
        fbckutil/fa_unit_as_string.c
        fbckutil/fa_update_secondaries.c
        fbckutil/fa_vector_button.c
        fbckutil/fa_warm_msg_init.c
        fbckutil/fbck_fb31ebias_watchdog.c
        fbckutil/fbck_hhpt_watchdog.c
        fbckutil/fbck_scan_to_micro.c
        fbckutil/fbck_setp_upd_watchdog.c
        fbckutil/fbck_tmva_watchdog.c
        fbckutil/ffeta_feed_control.for
        fbckutil/fk_add_link.c
        fbckutil/fk_alloc_ring.c
        fbckutil/fk_clear_ring.c
        fbckutil/fk_copy_vars_from_object.c
        fbckutil/fk_copy_vars_to_object.c
        fbckutil/fk_create_context.c
        fbckutil/fk_create_defaxis.c
        fbckutil/fk_create_feedback.c
        fbckutil/fk_create_instance.c
        fbckutil/fk_create_micro.c
        fbckutil/fk_create_micro_info.c
        fbckutil/fk_create_model.c
        fbckutil/fk_create_mvar.c
        fbckutil/fk_create_mvardes.c
        fbckutil/fk_create_objects.c
        fbckutil/fk_create_plot.c
        fbckutil/fk_create_routine.c
        fbckutil/fk_create_var.c
        fbckutil/fk_create_vector.c
        fbckutil/fk_db_bdes_change.c
        fbckutil/fk_db_read_bpmd.c
        fbckutil/fk_db_read_cascade.c
        fbckutil/fk_db_read_elements.c
        fbckutil/fk_db_read_fbck_change.c
        fbckutil/fk_db_read_fbck_gen.c
        fbckutil/fk_db_read_fbck_micro.c
        fbckutil/fk_db_read_fmvr.c
        fbckutil/fk_db_read_fmvr_des.c
        fbckutil/fk_db_read_fplt.c
        fbckutil/fk_db_read_fvar.c
        fbckutil/fk_db_read_miscsecs.c
        fbckutil/fk_db_read_ofunctions.c
        fbckutil/fk_db_read_setp.c
        fbckutil/fk_db_read_vector_element.c
        fbckutil/fk_dbput_elements.c
        fbckutil/fk_delete_all_link.c
        fbckutil/fk_delete_link.c
        fbckutil/fk_do_for_each.c
        fbckutil/fk_find_link.c
        fbckutil/fk_find_link_from_ordr.c
        fbckutil/fk_find_link_from_unit.obsc
        fbckutil/fk_find_noalpha.c
        fbckutil/fk_find_struct.c
        fbckutil/fk_free_object.c
        fbckutil/fk_free_ring.c
        fbckutil/fk_get_cur_info.c
        fbckutil/fk_get_cur_label.c
        fbckutil/fk_get_factory.c
        fbckutil/fk_get_nstruct.c
        fbckutil/fk_get_nvec.c
        fbckutil/fk_get_ring_status.c
        fbckutil/fk_get_self.c
        fbckutil/fk_get_self_label.c
        fbckutil/fk_get_self_walk.c
        fbckutil/fk_get_vec_ele_db_structs.c
        fbckutil/fk_get_vec_ele_info.c
        fbckutil/fk_get_vec_element_units.c
        fbckutil/fk_get_vec_elements.c
        fbckutil/fk_init_butobj.c
        fbckutil/fk_init_db.c
        fbckutil/fk_insert_microlist.c
        fbckutil/fk_load_ring_buffer.c
        fbckutil/fk_load_time.c
        fbckutil/fk_mailbox.c
        fbckutil/fk_make_feedback.c
        fbckutil/fk_make_map_micro_to_vax.c
        fbckutil/fk_make_micro.c
        fbckutil/fk_make_mvar.c
        fbckutil/fk_make_mvardes.c
        fbckutil/fk_make_plot.c
        fbckutil/fk_make_ring.c
        fbckutil/fk_make_ring_stat_des.c
        fbckutil/fk_make_var.c
        fbckutil/fk_malloc.c
        fbckutil/fk_micro_does_task.c
        fbckutil/fk_move_cur.c
        fbckutil/fk_move_head.c
        fbckutil/fk_move_next.c
        fbckutil/fk_move_prev.c
        fbckutil/fk_move_struct.c
        fbckutil/fk_move_tail.c
        fbckutil/fk_msg_sync.c
        fbckutil/fk_new_link.c
        fbckutil/fk_new_object.c
        fbckutil/fk_remove_node.c
        fbckutil/fk_restore_cur.c
        fbckutil/fk_send_init.c
        fbckutil/fk_set_link.c
        fbckutil/fk_set_struct.c
        fbckutil/fk_setcur_head.c
        fbckutil/fk_setup_init_free.c
        fbckutil/fk_task_mail_box.c
        fbckutil/fk_vector_task.c
        fbckutil/fk_verify_state_elems.c
        crrutil/ap_add_psuedosecn_bpm.for
        crrutil/ap_beam_scan.for
        crrutil/ap_bscn_get.for
        crrutil/ap_camac_get.for
        crrutil/ap_channame_to_text.for
        crrutil/ap_dev_to_but.for
        crrutil/ap_dev_to_str.for
        crrutil/ap_dev_to_text.for
        crrutil/ap_epicschan_get.for
        crrutil/ap_expr_to_text.for
        crrutil/ap_ftp_get.for
        crrutil/ap_get_alias.for
        crrutil/ap_get_psuedosecn_bpm.for
        crrutil/ap_injection.for
        crrutil/ap_injt_get.for
        crrutil/ap_parse_chan.for
        crrutil/ap_phys_add.for
        crrutil/ap_phys_alias.for
        crrutil/ap_phys_block.for
        crrutil/ap_phys_bpm.for
        crrutil/ap_phys_bpm_init.for
        crrutil/ap_phys_calc.for
        crrutil/ap_phys_ctrl.for
        crrutil/ap_phys_deflections.for
        crrutil/ap_phys_delta_energy.for
        crrutil/ap_phys_dyn_add.for
        crrutil/ap_phys_dyn_clear.for
        crrutil/ap_phys_dyn_valid.for
        crrutil/ap_phys_emit.for
        crrutil/ap_phys_energy_init.for
        crrutil/ap_phys_espread.for
        crrutil/ap_phys_eta.for
        crrutil/ap_phys_file.for
        crrutil/ap_phys_file_acq.for
        crrutil/ap_phys_file_add.for
        crrutil/ap_phys_file_micros.for
        crrutil/ap_phys_get.for
        crrutil/ap_phys_index.for
        crrutil/ap_phys_init.for
        crrutil/ap_phys_masterosc.c
        crrutil/ap_phys_micro_list.for
        crrutil/ap_phys_orbfit.c
        crrutil/ap_phys_pepiitune.c
        crrutil/ap_phys_rdgs.for
        crrutil/ap_phys_secn_list.for
        crrutil/ap_phys_set.for
        crrutil/ap_phys_term.for
        crrutil/ap_phys_wire_emit_vars.for
        crrutil/ap_phys_yield.for
        crrutil/ap_phys_yield_add.for
        crrutil/ap_phys_yield_micros.for
        crrutil/ap_phys_yield_secns.for
        crrutil/ap_rev_lgps.for
        crrutil/ap_rev_sample.for
        crrutil/ap_scan.for
        crrutil/ap_show_phys.for
        crrutil/ap_trig.c
        crrutil/ap_valid_epicschan.for
        crrutil/ap_valid_phys.for
        crrutil/ap_valid_psuedosecn_bpm.for
        crrutil/ap_valid_yield.for
        crrutil/ap_wire_scan.for
        crrutil/ap_wscn_get.for
        crrutil/apparse.for
        crrutil/appsupp.for
        crrutil/cau_pvnametoslcname.c
        crrutil/cmth.y
        crrutil/cmth_arith.c
        crrutil/cmth_bltin.c
        crrutil/cmth_but.c
        crrutil/cmth_code.c
        crrutil/cmth_disp.c
        crrutil/cmth_err.c
        crrutil/cmth_eval.c
        crrutil/cmth_init.c
        crrutil/cmth_msc.c
        crrutil/cmth_svidname_as_init.for
        crrutil/cmth_svtbl.c
        crrutil/cmth_symbol.c
        crrutil/cmth_tab.c
        crrutil/crr_acq_ok.for
        crrutil/crr_all_to_file.for
        crrutil/crr_auto_collide.for
        crrutil/crr_axis_label.c
        crrutil/crr_beam_beam_fit.for
        crrutil/crr_best_value.for
        crrutil/crr_binary_file.for
        crrutil/crr_bscn.for
        crrutil/crr_bscn_disp.for
        crrutil/crr_check_bpmdef.for
        crrutil/crr_check_epicschan_put.for
        crrutil/crr_check_vartype.for
        crrutil/crr_cur_plot.for
        crrutil/crr_cvt_sv.for
        crrutil/crr_data_acq.for
        crrutil/crr_data_acq_done.for
        crrutil/crr_data_acq_init.for
        crrutil/crr_data_acq_term.for
        crrutil/crr_data_diag.for
        crrutil/crr_data_init.for
        crrutil/crr_data_to_file.for
        crrutil/crr_data_to_file_init.for
        crrutil/crr_data_to_file_term.for
        crrutil/crr_db_sync.for
        crrutil/crr_de_beam_fit.for
        crrutil/crr_def_title.for
        crrutil/crr_dir_button_files.for
        crrutil/crr_display_all.for
        crrutil/crr_display_input_parser.for
        crrutil/crr_display_sampled_variables.for
        crrutil/crr_display_samples.for
        crrutil/crr_disr_beam_fit.for
        crrutil/crr_draw_plot.for
        crrutil/crr_draw_plot_contour.for
        crrutil/crr_draw_plot_contour.for_vax
        crrutil/crr_drvr.for
        crrutil/crr_dsply_fitparams.for
        crrutil/crr_edit_coord.for
        crrutil/crr_enter_split_range.obsfor
        crrutil/crr_enter_step_range.for
        crrutil/crr_error.for
        crrutil/crr_eta_acq.for
        crrutil/crr_eta_analyze.for
        crrutil/crr_eta_setup.for
        crrutil/crr_fb31_data_acq.c
        crrutil/crr_file_alias.for
        crrutil/crr_filter.for
        crrutil/crr_find_color.for
        crrutil/crr_find_stat.for
        crrutil/crr_fit.for
        crrutil/crr_fit_n_disp.for
        crrutil/crr_flat_beam_fit.for
        crrutil/crr_format_val.for
        crrutil/crr_frms.for
        crrutil/crr_get_fit_setup.for
        crrutil/crr_get_range.for
        crrutil/crr_get_sv.for
        crrutil/crr_inc_stv.for
        crrutil/crr_init.for
        crrutil/crr_init_context.for
        crrutil/crr_init_wscn_context.for
        crrutil/crr_input_but.for
        crrutil/crr_input_value.for
        crrutil/crr_kek_bsm_fit.for
        crrutil/crr_laser_wire_fit.for
        crrutil/crr_lgps_data_acq.obsfor
        crrutil/crr_lgps_flip.for
        crrutil/crr_locks.for
        crrutil/crr_mark_plot.for
        crrutil/crr_matrix_display.for
        crrutil/crr_napl_general_wire_func.for
        crrutil/crr_opts.c
        crrutil/crr_plot_bad.for
        crrutil/crr_prep_data.for
        crrutil/crr_prep_data_stv.for
        crrutil/crr_prep_plot.for
        crrutil/crr_prep_user_fit.for
        crrutil/crr_prime_yy.for
        crrutil/crr_put_stv.for
        crrutil/crr_reload.for
        crrutil/crr_restore_button_file.for
        crrutil/crr_robust_fit.for
        crrutil/crr_sample_all.for
        crrutil/crr_save_button_file.for
        crrutil/crr_save_spread_sheet.for
        crrutil/crr_saverestore.for
        crrutil/crr_scan_sv.for
        crrutil/crr_select_samp_var_display.for
        crrutil/crr_set_xdescr.for
        crrutil/crr_settle.c
        crrutil/crr_setup_skew_context.for
        crrutil/crr_setvar_labelonly.for
        crrutil/crr_sev_plot.for
        crrutil/crr_show_but.for
        crrutil/crr_show_range.for
        crrutil/crr_sort3d.for
        crrutil/crr_split_range.for
        crrutil/crr_step_info.for
        crrutil/crr_step_setup.for
        crrutil/crr_step_setup_calc.for
        crrutil/crr_step_setup_currval.for
        crrutil/crr_step_setup_oneseg.for
        crrutil/crr_step_setup_pnlw.for
        crrutil/crr_step_setup_setp_prmt.for
        crrutil/crr_time_decay_fit.for
        crrutil/crr_trim_stv.for
        crrutil/crr_wscn.for
        crrutil/crr_wscn_disp.for
        crrutil/crr_wscn_fetch.for
        crrutil/crr_wscn_sort.for
        crrutil/crrdisp.for
        crrutil/crrinit.for
        crrutil/crrinterface.for
        crrutil/crrpage.for
        crrutil/crrplot.for
        crrutil/crrserv.for
        crrutil/crrswitch_output.for
        crrutil/crrtrim_one.obsfor
        crrutil/ff_bb_calc_engy.for
        crrutil/ff_bb_defl_fitparm.for
        crrutil/ff_bb_filter.for
        crrutil/ff_bb_fit_avg.for
        crrutil/ff_bb_fit_bsm.for
        crrutil/ff_bb_fit_defl.for
        crrutil/ff_bb_fit_lum.for
        crrutil/ff_bb_fitter.for
        crrutil/ff_bb_gauss_fitparm.for
        crrutil/ff_bb_parab_fitparm.for
        crrutil/ff_do_scan.for
        crrutil/ff_zero_dithers.for
        crrutil/flat_beam_beam_fit_dialog.for
        crrutil/flat_beam_disr_argm.for
        crrutil/mkb_chan_write.for
        crrutil/mkb_check_file.for
        crrutil/mkb_check_hw_access.for
        crrutil/mkb_check_magfbck.for
        crrutil/mkb_check_neterr.for
        crrutil/mkb_check_val.for
        crrutil/mkb_crrdrvr.for
        crrutil/mkb_crrknobstep.obsc
        crrutil/mkb_db_read.for
        crrutil/mkb_db_write.for
        crrutil/mkb_def.for
        crrutil/mkb_delete_dev.for
        crrutil/mkb_dev_eval.for
        crrutil/mkb_dev_limcheck.for
        crrutil/mkb_dev_write.for
        crrutil/mkb_device_list.for
        crrutil/mkb_disp.for
        crrutil/mkb_enter_value.for
        crrutil/mkb_expand_lists.for
        crrutil/mkb_initialise.for
        crrutil/mkb_interp.for
        crrutil/mkb_interp_err.for
        crrutil/mkb_invert_func.for
        crrutil/mkb_klys_write.for
        crrutil/mkb_knob_eval.for
        crrutil/mkb_knobreset.for
        crrutil/mkb_lgps_init.for
        crrutil/mkb_mag_write.for
        crrutil/mkb_make_microlists.for
        crrutil/mkb_notinlist.for
        crrutil/mkb_psk_write.for
        crrutil/mkb_rebuild.for
        crrutil/mkb_set.for
        crrutil/mkb_set_channel.for
        crrutil/mkb_set_device.for
        crrutil/mkb_set_devqual.for
        crrutil/mkb_set_knobfunc.for
        crrutil/mkb_set_knobstart.for
        crrutil/mkb_set_list.for
        crrutil/mkb_setbeam.for
        crrutil/mkb_setmicr.for
        crrutil/mkb_setprim.for
        crrutil/mkb_setsecn.for
        crrutil/mkb_setunit.for
        crrutil/mkb_show.for
        crrutil/mkb_showdev.for
        crrutil/mkb_showfuncval.for
        crrutil/mkb_showknobfunc.for
        crrutil/mkb_symb_subs.for
        crrutil/mkb_tell.for
        crrutil/mkb_tmva_write.for
        crrutil/mkb_token.for
        crrutil/mkb_trbr_write.for
        crrutil/mkb_trig_write.for
        crrutil/mkb_user.for
        crrutil/mkb_user_rout_data.for
        crrutil/mkb_user_rout_setup.for
        crrutil/mkb_vdu_write.for
        crrutil/mkbdrvr.for
        crrutil/mkbhst_get_knobdef.for
        crrutil/mkbinterface.for
        crrutil/mkbmain.for
        crrutil/mkbpanel.for
        crrutil/mkbtun.for
        crrutil/mkbwritefile.for
        crrutil/mknob.cld
        crrutil/pep_bscn.c
        crrutil/pep_dbput_beam_motion.for
        crrutil/pr02_init_restore.for
        crrutil/rdgs.c
        crrutil/wire_filter.for
        crrutil/ws_orsay_bsm.for
        crrutil/wsopt_cea_curvature_calc.for
        crrutil/wsopt_cea_error_calc.for
        crrutil/wsopt_cea_matr_scale.for
        crrutil/wsopt_cea_prep_disp.for
        crrutil/wsopt_cea_sensitivity.for
        crrutil/wsopt_cea_supression_calc.for
        crrutil/wsopt_cea_twiss_calc.for
        crrutil/wsopt_emit_calc.for
        crrutil/wsopt_emit_calc_4d.for
        crrutil/wsopt_emit_calc_newcea.for
        crrutil/wsopt_emit_calc_old.for
        crrutil/wsopt_emit_calc_type.for
        crrutil/wsopt_emit_err_calc.for
        crrutil/wsopt_emit_model_setup.for
        crrutil/wsopt_emit_scan_type.for
        crrutil/wsopt_emit_setup.for
        crrutil/wsopt_emit_time_check.for
        crrutil/wsopt_emit_twobeam_calc.for
        crrutil/wsopt_espd_calc.for
        crrutil/wsopt_espd_setup.for
        crrutil/wsopt_eta_calc.for
        crrutil/wsopt_eta_fit.for
        crrutil/wsopt_eta_setup.for
        crrutil/wsopt_skew_calc.for
        crrutil/wsopt_skew_twobeam_calc.for
        crrutil/wsopt_wire_transform.for
        crrutil/wsopt_wire_transform_chisq.for
        )
